# WifiClient

./: .gitignore  CMakeLists.txt  Containerfile  Doxyfile  Makefile  application.pro  application.qrc  config.json  default.nix
languages/: application_de_DE.ts  application_en_GB.ts  application_fr_FR.ts
qml/: InputField.qml  LanguageSelection.qml  NetworkSelection.qml  PasswordField.qml  client.qml
src/: main.cpp
src/WifiClient/client/: application.cpp  application.h  connection.cpp  connection.h  languagemodel.cpp  languagemodel.h  networkmodel.cpp  networkmodel.h
src/WifiClient/server/: config.cpp  config.h  networkstatus.h  server.cpp  server.h  simulator.cpp  simulator.h
